# infinity-arcade

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/skills/pygame-genre-forge/: SKILL.md
.claude/skills/pygame-genre-forge/examples/: puzzle_minimal.md  shooter_minimal.md  sports_minimal.md
.claude/skills/pygame-genre-forge/references/: genre_catalog.md  prompting_rules.md  troubleshooting.md
.claude/skills/pygame-genre-forge/scripts/: generate_game.py  setup_env.py  validate_game.py
.github/workflows/: ci.yml
src/genre_forge/: __init__.py
src/genre_forge/engine/: __init__.py  collision.py  core_loop.py  input_map.py  math2d.py  scene_manager.py
src/genre_forge/engine/rendering/: __init__.py  effects.py
src/genre_forge/engine/ui/: __init__.py  hud.py
src/genre_forge/genres/: __init__.py
src/genre_forge/genres/puzzle/: blueprint.schema.json  genre.md
src/genre_forge/genres/shooter/: blueprint.schema.json  genre.md
src/genre_forge/genres/sports/: blueprint.schema.json  genre.md
src/genre_forge/templates/_common/: __init__.py
src/genre_forge/validation/: __init__.py  capture.py  report.py  runner.py  smoke.py
tests/: test_skill_smoke.py
